# GithubBazelGo

./: BUILD  WORKSPACE  azure-pipelines.yml  bazel-bazel-gazelle-help  bazel-bin  bazel-out  bazel-testlogs
bazel-data/bazel-out/: stable-status.txt  volatile-status.txt
fruit/: BUILD.bazel  Gopkg.toml  fruit.go  fruit.proto  hello.go
