load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "fruit_proto",
    srcs = ["fruit.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "fruit_go_proto",
    importpath = "github.com/leeren/bazel-gazelle-help/fruit",
    proto = ":fruit_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["fruit.go"],
    embed = [":fruit_go_proto"],
    importpath = "github.com/leeren/bazel-gazelle-help/fruit",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_leeren_bazel_gazelle_help//fruit/fruit_go_proto:go_default_library",
    ],
)
